--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <h1>O Maktub voltou!</h1>
             <p>O essencial bem feito, com o cuidado que só o Maktub oferece</p>
         </div>
-        <a href="" class="button-reserva">Faça sua reserva!</a>
+        <a href="" class="btn-reserva">Faça sua <br> reserva!</a>
     </header>
     <main>
         <section class="presentation">
@@ -73,7 +73,7 @@
             <div class="right">
                 <h2>Sua próxima estadia começa aqui.</h2>
                 <p>Clique abaixo e garanta conforto, tradição e confiança no coração de Itu.</p>
-                <a href="" class="button-reserva">Faça sua reserva!</a>
+                <a href="" class="btn-reserva big">Faça sua <br> reserva!</a>
             </div>
         </section>
     </main>
